--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
+
 </head>
 <body>
-<script src="javascript.js"></script>
+
+<button id="Rock">Rock</button>
+<button id="Paper">Paper</button>
+<button id="Scissors">Scissors</button>
 </body>
+<script src="javascript.js"></script> <!-- Script goes here -->
+
 </html>
