--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <button id="Rock">Rock</button>
 <button id="Paper">Paper</button>
 <button id="Scissors">Scissors</button>
+<div id="result"></div>
 </body>
 <script src="javascript.js"></script> <!-- Script goes here -->
 
