--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <button id="Paper">Paper</button>
 <button id="Scissors">Scissors</button>
 <div id="result"></div>
+<div id="score"></div>
+<div id="winner"></div>
 </body>
 <script src="javascript.js"></script> <!-- Script goes here -->
 
