--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -8,7 +9,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+
     <div class="container">
+        <header>
+            <h1 class="Heading">Rock Paper Scissors Game</h1>
+        </header>
         <div class="buttons">
             <button id="Rock"><img src="images/rock.png" alt="Rock"></button>
             <button id="Paper"><img src="images/paper.png" alt="Paper"></button>
