--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rock Paper Scissors</title>
+
 </head>
 <body>
     <div class="container">
@@ -24,4 +25,7 @@
     </div>
     <script src="javascript.js"></script>
 </body>
+<footer>
+    <p class="footnote">Made by Srikar Anumolu. Images from flaticon</p>
+</footer>
 </html>
